# serializer version: 1
# name: TestQuadXTrackingCostEqual.test_snapshot
  -0.005546260092644
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.1
  0.002660358203223
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.10
  -2.728883e-09
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.100
  0.000231426066448
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.101
  -0.000526820863918
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.102
  0.942020302647411
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.103
  -2.3366309591134
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.104
  -0.311734346044068
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.105
  -0.811799955800418
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.106
  0.741411991078882
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.107
  0.551633340670808
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.108
  0.85861159172926
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.109
  0.818359508283141
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.11
  1.0237501e-08
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.110
  0.71307207215371
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.111
  0.117537397457838
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.112
  -0.993068456954926
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.113
  1.011776612677411
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.114
  -0.11730597139139
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.115
  0.992541636091008
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.116
  -0.069756310029999
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.117
  1.00188099746791
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.118
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.119
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.12
  0.968122447374477
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.120
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
  })
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.121
  0.942116505077974
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.122
  2.752935615019766
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.123
  -0.636746716899522
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.124
  -0.0527336655245
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.125
  0.016079648325736
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.126
  0.015033288370922
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.127
  0.998365967804806
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.128
  0.025584104044566
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.129
  0.025767317829552
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.13
  0.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.130
  0.751791685554476
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.131
  0.001394315992608
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.132
  0.001674797057525
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.133
  0.959756414856305
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.134
  0.903931208706458
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.135
  2.027971026224859
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.136
  -0.355539074523099
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.137
  0.181790977427822
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.138
  0.127910999008486
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.139
  0.145353815381727
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.14
  0.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.140
  0.260218258786454
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.141
  0.422730979029815
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.142
  0.156434465040231
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.143
  -0.987688340595138
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.144
  1.015697629882328
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.145
  -0.155040149047622
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.146
  0.989363137652662
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.147
  -0.055941215026023
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.148
  1.002998646809266
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.149
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.15
  0.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.150
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.151
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
  })
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.152
  1.67851560357164
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.153
  -4.768844212374379
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.154
  3.175060517229094
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.155
  -0.038429420454238
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.156
  0.008524195436898
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.157
  0.032911866570787
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.158
  0.998682795873911
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.159
  0.057951989933659
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.16
  0.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.160
  0.072838812168016
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.161
  0.910100347698314
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.162
  0.002796698194735
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.163
  0.004839175658865
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.164
  0.979771504157222
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.165
  0.34296633177342
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.166
  -2.740617007691522
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.167
  2.05856736603782
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.168
  0.505331519297652
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.169
  0.520012854878745
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.17
  0.050449831588859
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.170
  0.333953225599862
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.171
  0.591904056319934
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.172
  0.523663295629717
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.173
  0.195090322016128
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.174
  -0.98078528040323
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.175
  1.019614773931961
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.176
  -0.192293623821394
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.177
  0.985624456062096
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.178
  -0.039843269774739
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.179
  1.004997458850722
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.18
  0.051131413074664
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.180
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.181
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.182
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
  })
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.19
  0.048928499654924
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.2
  0.001485007497906
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.20
  0.049153413433463
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.21
  0.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.22
  -1.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.23
  1.0
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.24
  -2.728883e-09
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.25
  1.000000010237501
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.26
  -0.031877552625523
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.27
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
  })
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.28
  2.735040642527962
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.29
  -1.152209644123205
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.3
  -9.9583383586e-05
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.30
  3.0068916952955
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.31
  0.016530721311727
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.32
  -0.007777188807383
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.33
  0.016729439377876
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.34
  0.999693141141456
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.35
  -0.011901595662233
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.36
  -0.023986617815915
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.37
  -0.686439128909662
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.38
  -4.608636589e-06
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.39
  -8.229901244e-06
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.4
  -5.7537558e-06
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.40
  0.948831586609078
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.41
  1.721316619099806
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.42
  -0.384038089301797
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.43
  2.25313718157236
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.44
  0.557894423247491
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.45
  0.415263636671929
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.46
  0.472017180226357
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.47
  0.617629918452068
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.48
  0.611093026357304
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.49
  0.039259815759069
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.5
  1.6838242971e-05
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.50
  -0.999229036240723
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.51
  1.003926829327955
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.52
  -0.039264424395658
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.53
  0.999220806339478
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.54
  -0.055095242718877
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.55
  1.001508562427247
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.56
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.57
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.58
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
  })
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.59
  -6.334731068635765
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.6
  0.999999994883259
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.60
  4.775334279472101
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.61
  1.220514901151053
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.62
  -0.01060372726374
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.63
  0.021283279530193
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.64
  0.051348143414379
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.65
  0.998397691878568
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.66
  -0.001832618857884
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.67
  -0.023857412059533
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.68
  -0.217962246622005
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.69
  -0.000155883874945
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.7
  -8.92936435e-06
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.70
  -0.000412495247053
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.71
  0.937960536863591
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.72
  -2.549858925072974
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.73
  2.988423371570267
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.74
  1.640789138667041
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.75
  0.628851444221563
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.76
  0.742426197199802
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.77
  0.742970312275384
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.78
  0.543964017484906
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.79
  0.498729505904009
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.8
  0.000152711200242
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.80
  0.078459095727845
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.81
  -0.996917333733128
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.82
  1.007852689769532
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.83
  -0.07861497960279
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.84
  0.996504838486075
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.85
  -0.069892152905942
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.86
  1.002041476777251
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.87
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.88
  False
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.89
  dict({
    'collision': False,
    'env_complete': False,
    'out_of_bounds': False,
  })
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.9
  -0.763516733780097
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.90
  -1.147696024092314
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.91
  -3.194849968191354
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.92
  -2.65752306804359
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.93
  -0.070081986709165
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.94
  0.012550286137052
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.95
  0.03552110721449
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.96
  0.996829602489328
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.97
  0.026133795224247
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.98
  -0.033193594195807
# ---
# name: TestQuadXTrackingCostEqual.test_snapshot.99
  0.472567984722178
# ---
